--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -237,7 +237,7 @@ title={Full-chip runtime error-tolerant thermal estimation and prediction for pr
 booktitle= iccad,
 year={2011},
 pages = {716--723},
-month ={Nov.},
+month ={November},
 }
 
 @ARTICLE{ShenTan:TODAES'12,
@@ -862,7 +862,6 @@ month ={June},
 for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
   author={Heba Khdr and Santiago Pagani and Muhammad Shafique and J\"{o}rg Henkel},
   booktitle= dac,
-  pages={1--6},
   year={2015},
 }
 
@@ -3238,7 +3237,7 @@ title={Extending systems-on-chip to the third dimension: performance, cost and t
 booktitle= iccad,
 year={2007},
 pages = {212--219},
-month ={Nov.},
+month ={November},
 }
 
 @Book{Silberschatz:Book'12,
@@ -3461,7 +3460,7 @@ title={Smartphone Analysis and Optimization based on User Activity Recognition},
 booktitle= iccad,
 year={2015},
 pages = {605--612},
-month ={Nov.},
+month ={November},
 }
 
 @inproceedings{Kim:DATE'15,
@@ -3512,7 +3511,7 @@ title={A user-centric {CPU-GPU} governing framework for 3D games on mobile devic
 booktitle= iccad,
 year={2015},
 pages = {224--231},
-month ={Nov.},
+month ={November},
 }
 
 @article{Liu:TCAD'15,
@@ -3543,6 +3542,7 @@ month ={Nov.},
  	 number={1},
  	 pages={20--24},
  	 year={1995},
+	 month={March},
   	 publisher={ACM}
 }
 
@@ -3585,6 +3585,7 @@ month ={Nov.},
   	number={3},
   	pages={520--533},
   	year={2015},
+	month={March},
   	publisher={IEEE}
 }
 
@@ -3596,16 +3597,17 @@ month ={Nov.},
   	number={10},
   	pages={3118--3131},
   	year={2016},
+	month={March},
   	publisher={IEEE}
 }
 
 @inproceedings{Healy:CICC'10,
   	title={Design and analysis of {3D-MAPS}: A many-core {3D} processor with stacked memory},
   	author={Healy, Michael B and Athikulwongse, Krit and Goel, Rohan and Hossain, Mohammad M and Kim, Dae Hyun and Lee, Young-Joon and Lewis, Dean L and Lin, Tzu-Wei and Liu, Chang and Jung, Moongon and others},
-  	booktitle={IEEE Custom Integrated Circuits Conference 2010},
-  	pages={1--4},
+  	booktitle=cicc,
   	year={2010},
-  	organization={IEEE}
+  	month={September},
+	location={San Jose, CA, USA},
 }
 
 @article{Zhang:JETC'15,
@@ -3614,8 +3616,9 @@ month ={Nov.},
   	journal={ACM Journal on Emerging Technologies in Computing Systems},
   	volume={12},
   	number={2},
-  	pages={14},
+  	pages={14:1--14:20},
   	year={2015},
+	month={August},
   	publisher={ACM}
 }
 
@@ -3626,6 +3629,7 @@ month ={Nov.},
   	volume={51},
   	pages={76--98},
   	year={2017},
+	month={June},
   	publisher={Elsevier}
 }
 
@@ -3641,9 +3645,10 @@ month ={Nov.},
 @inproceedings{Ruano:WISP'15,
   title={Improving a neural networks based {HVAC} predictive control approach},
   author={A. E. Ruano and S. Silva and Shabnam Pesteh and P. M. Ferreira and H. Duarte and G. Mestre and H. Khosravani and R. Horta},
-  booktitle={IEEE International Symposium on Intelligent Signal Processing},
-  pages={1--6},
+  booktitle={Proc. IEEE Int. Symp. on Intelligent Signal Processing},
   year={2015},
+  month={May},
+  location={Siena, Italy}
 }
 
 @article{Afram:EB'17,
@@ -3807,6 +3812,8 @@ month ={Nov.},
  title = {{3D}-stacked memory architectures for multi-core processors},
  booktitle = isca,
  year = {2008},
+ month={July},
+ location={Beijing, China},
  pages = {453--464},
 }
 
@@ -3839,7 +3846,6 @@ month ={Nov.},
  year = {2018},
  month = {January},
  location = {Jeju, South Korea},
- OPTpages = {417--422}
 }
 
 @phdthesis{Bienia:THESIS'11,
@@ -3853,10 +3859,10 @@ month ={Nov.},
 @article{Binkert:SIGARCH'11,
   author = {Nathan Binkert and Bradford Beckmann and Gabriel Black and Steven K. Reinhardt and Ali Saidi and Arkaprava Basu and Joel Hestness and Derek R. Hower and Tushar Krishna and Somayeh Sardashti and Rathijit Sen and Korey Sewell and Muhammad Shoaib and Nilay Vaish and Mark D. Hill and  David A. Wood},
   title = {The gem5 Simulator},
-  journal = {SIGARCH Comput. Archit. News},
+  journal = {ACM SIGARCH Comput. Archit. News},
   volume = {39},
   number = {2},
-  month = {August},
+  month = {May},
   year = {2011},
   pages = {1--7}
 } 
@@ -3934,7 +3940,7 @@ pages={129--134}
 @inproceedings{Aljeddani:ICIST'18,
  author = {Sulaiman Aljeddani and Farah Mohammadi},
  title = {A Novel Migration Technique to Balance Thermal Distribution for Future Heterogeneous {3D} Chip Multiprocessors},
- booktitle = {2018 Eighth International Conference on Information Science and Technology (ICIST)},
+ booktitle = {Proc. Int. Conf. on Information Science and Technology (ICIST)},
  year = {2018},
  month = {June},
  location = {Cordoba, Spain},
@@ -3943,10 +3949,11 @@ pages={129--134}
 @inproceedings{Tsai:SAC'12,
  author = {Ting-Hao Tsai and Ya-Shu Chen},
  title = {Thermal-aware Real-time Task Scheduling for Three-dimensional Multicore Chip},
- booktitle = {Proceedings of the 27th Annual ACM Symposium on Applied Computing},
+ booktitle = {Proc. ACM Symp. on Applied Computing (SAC)},
  year = {2012},
  pages = {1618--1624},
- number = {7}
+ location = {Trento, Italy},
+ month = {March},
 } 
 
 @article{Chakraborty:MM'17,
@@ -3990,7 +3997,6 @@ booktitle = dac,
 year = {2017},
 month = {June},
 location = {Austin, TX, USA},
-pages = {1--6}
 }
 
 @inproceedings{Ma:DATE'17,
