--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1030,7 +1030,6 @@ month = apr
   title={Accurate Temperature-Dependent Integrated Circuit Leakage Power Estimation is Easy},
   author={Yongpan Liu and Robert Dick and Li Shang and Huazhong Yang},
   booktitle= date,
-  pages={1--6},
   year={2007},
 }
 
@@ -1591,7 +1590,7 @@ year={2008},
 
 @Article{Rotem:MICRO'12,
   author =       {Efraim Rotem and Alon Naveh and Doron Rajwan and Avinash Ananthakrishnan and Eliezer Weissmann},
-  title =        {Power-management architecture of the intel microarchitecture code-named sandy bridge},
+  title =        {Power-management architecture of the {Intel} microarchitecture code-named {Sandy Bridge}},
   journal =      micro,
   year =         {2012},
   pages =    {20--27},
@@ -3735,8 +3734,8 @@ month ={November},
   title={Energy-Optimal Dynamic Thermal Management: Computation and Cooling Power Co-Optimization},
   author={Donghwa Shin and Sung Woo Chung and Eui-Young Chung and Naehyuck Chang},
   journal=tii,
-  number={6},
-  volume={3}, 
+  number={3},
+  volume={6}, 
   pages={340--351},
   month={August},
   year={2010},
@@ -3746,8 +3745,8 @@ month ={November},
   title={Feasibility Analysis for Temperature-Constraint Hard Real-Time Periodic Tasks},
   author={Gang Quan and Vivek Chaturvedi},
   journal=tii,
-  number={6},
-  volume={3}, 
+  number={3},
+  volume={6}, 
   pages={329--339},
   month={August},
   year={2010},
@@ -3757,8 +3756,8 @@ month ={November},
   title={On Maximizing Reliability of Real-Time Embedded Applications Under Hard Energy Constraint},
   author={Baoxian Zhao and Hakan Aydin and Dakai Zhu},
   journal=tii,
-  number={6},
-  volume={3}, 
+  number={3},
+  volume={6}, 
   pages={316--328},
   month={August},
   year={2010},
