--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -271,7 +271,7 @@ month ={November},
   volume = 	 {23},
   number = 	 {2},
   pages = 	 {397-401},
-  month = 	 {Feb.},
+  month = 	 {Feburary},
   OPTnote = 	 {},
   OPTannote = 	 {}
 }
@@ -438,7 +438,7 @@ pages = {187--192}
   booktitle =    hpca,
   pages =    {171--182},
   year =     {2001},
-  month =     {Jan.},
+  month =     {January},
  location = {Monterrey, Mexico},
 }
 
@@ -898,6 +898,8 @@ for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
   booktitle= aspdac,
   pages={618--623},
   year={2015},
+  month={January},
+  location={Chiba, Japan},
 }
 
 @inproceedings{Kao:DAC'98,
@@ -1000,7 +1002,7 @@ month = apr
   volume =   {37},
   number =   {2},
   pages =    {229--234},
-  month =    {Feb.},
+  month =    {Feburary},
 }
 
 @article{Crawley:EB'01,
@@ -1031,6 +1033,8 @@ month = apr
   author={Yongpan Liu and Robert Dick and Li Shang and Huazhong Yang},
   booktitle= date,
   year={2007},
+  month={April},
+  location={Nice, France},
 }
 
 @inproceedings{Sarangi:ASPDAC'14,
@@ -1039,6 +1043,7 @@ month = apr
   booktitle= aspdac,
   pages={855--860},
   year={2014},
+  month={January},
 }
 
 @techreport{Liu:BSIM4,
@@ -1496,7 +1501,7 @@ year={2008},
   volume =   {94},
   number =   {8},
   pages =    {1487--1501},
-  month =    {Aug.},
+  month={August},
 }
 
 @Article{Li:HPCA'06,
@@ -3387,7 +3392,8 @@ Publisher={Wiley},
   volume={62},
   number={8},
   pages={761--765},
-  year={2015}
+  year={2015},
+  month={August},
 }
 
 @article{Iranfar:TPDS'18,
@@ -3489,7 +3495,7 @@ month ={November},
  title = {Hybrid dynamic energy and thermal management in heterogeneous embedded multiprocessor SoCs},
  booktitle = aspdac,
  year = {2010},
- month = {Jan.},
+ month = {January},
  location = {Taipei, Taiwan},
  pages = {873--878}
 }
