--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -50,6 +50,17 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangHu:TII'20,
+	author = {Hai Wang and Liwen Hu and Xingxing Guo and Yang Nie and He Tang},
+	journal = tii,
+	title = {Compact Piecewise Linear Model Based Temperature Control of Multi-Core Systems Considering Leakage Power},
+	year = {2020},
+        OPTmonth = {May},
+        OPTvolume = {67},
+        OPTnumber = {5},
+        OPTpages = {617--630},
+}
+
 @ARTICLE{WangXiao:TODAES'19,
 	author = {Hai Wang and Tao Xiao and Darong Huang and Lang Zhang and Chi Zhang and He Tang and Yuan Yuan},
 	journal = todaes,
