update name of date conf.

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,7 +1,7 @@
 ﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
-@string{date = "Proc. European Design and Test Conf. (DATE)"}
+@string{date = "Proc. Design, Automation and Test in Europe Conf. (DATE)"}
 @string{aspdac = "Proc. Asia South Pacific Design Automation Conf. (ASP-DAC)"}
 @string{iccd = "Proc. IEEE Int. Conf. on Computer Design (ICCD)"}
 @string{ispd = "Proc.  Int. Symp. on Physical Design (ISPD)"}
