--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3503,11 +3503,11 @@ month ={November},
 
 @inproceedings{Sharifi:ASPDAC'10,
  author = {Shervin Sharifi and Ayse Kivilcim Coskun and Tajana Simunic Rosing},
- title = {Hybrid dynamic energy and thermal management in heterogeneous embedded multiprocessor SoCs},
+ title = {Hybrid dynamic energy and thermal management in heterogeneous embedded multiprocessor {SoCs}},
  booktitle = aspdac,
  year = {2010},
  month = {January},
- location = {Taipei, Taiwan},
+ location = {Taipei, China},
  pages = {873--878}
 }
 
