--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3521,6 +3521,17 @@ month ={November},
  pages = {593--598}
 }
 
+@article{Sharifi:TCAD'13,
+	title={{PROMETHEUS}: A Proactive Method for Thermal Management of Heterogeneous {MPSoCs}},
+	author={Shervin Sharifi and Dilip Krishnaswamy and Tajana Simunic Rosing},
+	journal=tcad,
+	volume={32},
+	number={7},
+	pages={1110--1123},
+	year={2013},
+	month={July}
+}
+
 @conference{Chen:ICCAD'15,
 author={Wei-Ming Chen and Sheng-Wei Cheng and Pi-Cheng Hsiu and Tei-Wei Kuo},
 title={A user-centric {CPU-GPU} governing framework for 3D games on mobile devices},
