--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3151,7 +3151,7 @@ year={2012}
 }
 
 @inproceedings{Pathania:DAC'18,
-  title={QoS-Aware Stochastic Power Management for Many-Cores},
+  title={{QoS}-Aware Stochastic Power Management for Many-Cores},
   author={Anuj Pathania and Heba Khdr and Muhammad Shafique and Tulika Mitra and J\"{o}rg Henkel},
   booktitle=dac,
   year={2018},
@@ -3534,7 +3534,7 @@ month ={November},
 
 @conference{Chen:ICCAD'15,
 author={Wei-Ming Chen and Sheng-Wei Cheng and Pi-Cheng Hsiu and Tei-Wei Kuo},
-title={A user-centric {CPU-GPU} governing framework for 3D games on mobile devices},
+title={A user-centric {CPU-GPU} governing framework for {3D} games on mobile devices},
 booktitle= iccad,
 year={2015},
 pages = {224--231},
