--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3419,7 +3419,7 @@ Publisher={Wiley},
 
 @article{Zhang:TPDS'18,
   title={Machine Learning-Based Temperature Prediction for Runtime Thermal Management Across System Components},
-  author={Kaicheng Zhang and Akhil Guliani and Seda and Memik Gokhan Ogrenci-Memik and Kazutomo Yoshii and Rajesh Sankaran and Pete  Beckman},
+  author={Kaicheng Zhang and Akhil Guliani and Memik Gokhan Ogrenci-Memik and Kazutomo Yoshii and Rajesh Sankaran and Pete  Beckman},
   journal=tpds,
   volume={29},
   number={2},
@@ -3665,8 +3665,7 @@ month ={November},
      author = {Peter Greenhalgh},
      year = {2011},
      institution = {ARM Limited},
-     month = September,
-     year = {2011},
+     month = {September},
 }
 
 @inproceedings{Ruano:WISP'15,
