--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4034,3 +4034,15 @@ location = {Austin, TX, USA},
  location = {Lausanne, Switzerland},
  pages = {446--451}
 }
+
+@article{Sultan:CSUR'19,
+  author={Hameedah Sultan and Anjali Chauhan and Smruti R. Sarangi},
+  title={A Survey of Chip-level Thermal Simulators},
+  journal = {ACM Computing Surveys},
+  year={2019},
+  volume = {52},
+  number = {2},
+  pages = {42:1--42:35},
+  month =  {April}
+}
+
