--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4046,3 +4046,18 @@ location = {Austin, TX, USA},
   month =  {April}
 }
 
+@inproceedings{Pagani:DATE'15,
+  title={{MatEx}: Efficient transient and peak temperature computation for compact thermal models},
+  author={Santiago Pagani and Jian-Jia Chen and Muhammad Shafique and J\"{o}rg Henkel},
+  booktitle=date,
+  month = {March},
+  year={2015},
+  location = {Grenoble, France},
+}
+
+@book{Ha:HS_codesign'17,
+  editor = {Soonhoi Ha and J\"{u}rgen Teich},
+  title        = "Handbook of Hardware/Software Codesign",
+  publisher    = "Springer",
+  year         = "2017",
+}
