--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2820,11 +2820,17 @@ Year={1987}
 
 @Book{Hennessy:Book'12,
 title={Computer Architecture: A Quantitative Approach, Fifth Edition},
-author={John L Hennessy and David A Patterson},
+author={John L. Hennessy and David A. Patterson},
 Publisher={Elsevier},
 year={2012}
 }
 
+@Book{Patterson:Book'14,
+title={Computer Organization and Design: The Hardware/Software Interface, Fifth Edition},
+author={David A. Patterson and John L. Hennessy},
+Publisher={Elsevier},
+year={2014}
+}
 
 @techreport{Jaeger:Report'12,
   title={Long Short-Term Memory in Echo State Networks: Details of a Simulation Study},
@@ -4060,4 +4066,24 @@ location = {Austin, TX, USA},
   title        = "Handbook of Hardware/Software Codesign",
   publisher    = "Springer",
   year         = "2017",
+}
+
+@ARTICLE{Rapp:TOC'20,
+	author = {Martin Rapp and Mark Sagi and Anuj Pathania and Andreas Herkersdorf and J\"{o}rg Henkel},
+	journal = toc,
+	title = {Power- and Cache-Aware Task Mapping with Dynamic Power Budgeting for Many-Cores},
+	year = {2020},
+        month = {January},
+        volume = {69},
+        number = {1},
+        pages = {1--13},
+}
+
+@inproceedings{Rapp:DATE'19,
+  title={Prediction-Based Task Migration on {S-NUCA} Many-Cores},
+  author={Martin Rapp and Anuj Pathania and Tulika Mitra and J\"{o}rg Henkel},
+  booktitle=date,
+  month = {March},
+  year={2019},
+  location = {Florence, Italy},
 }
