--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4087,3 +4087,23 @@ location = {Austin, TX, USA},
   year={2019},
   location = {Florence, Italy},
 }
+
+@inproceedings{Homayoun:CASES'08,
+  title={Multiple Sleep Mode Leakage Control for Cache Peripheral Circuits in Embedded Processors},
+  author={Houman Homayoun and Mohammad Makhzan and Alex Veidenbaum},
+  booktitle={Proc. Intl. Conf. on Compilers, architectures and synthesis for embedded systems (CASES)},
+  month = {October},
+  year={2008},
+  location = {Atlanta, Georgia, USA},
+  pages = {197--206},
+}
+
+@inproceedings{Lee:ISQED'14,
+ author = {Seunghan Lee and Kyungsu Kang and Jongpil Jung and Chong-Min Kyung},
+ title = {Runtime {3-D} Stacked Cache Data Management for Energy Minimization of {3-D} Chip-Multiprocessors},
+ booktitle = isqed,
+ year = {2014},
+ month = {March},
+ location = {Santa Calra, CA},
+}
+
