--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4107,3 +4107,33 @@ location = {Austin, TX, USA},
  location = {Santa Calra, CA},
 }
 
+@article{Kim:TOC'15,
+  author={Dae Hyun Kim and Krit Athikulwongse and Michael B. Healy and Mohammad M. Hossain and Moongon Jung and Ilya Khorosh and Gokul Kumar and Young-Joon Lee and Dean L. Lewis and Tzu-Wei Lin and Chang Liu and Shreepad Panth and Mohit Pathak and Minzhen Ren and Guanhao Shen and Taigon Song and Dong Hyuk Woo and Xin Zhao and Joungho Kim and Ho Choi and Gabriel H. Loh and Hsien-Hsin S. Lee and Sung Kyu Lim},
+  title={Design and Analysis of {3D-MAPS} ({3D} Massively Parallel Processor with Stacked Memory)},
+  journal = toc,
+  year={2015},
+  volume = {64},
+  number = {1},
+  pages = {112--125},
+  month =  {January}
+}
+
+@ARTICLE{Cao:JSA'19,
+	author = {Kun Cao and Junlong Zhou and Tongquan Wei and Mingsong Chen and Shiyan Hu and Keqin Li},
+	journal = {Journal of System Architecture},
+	title = {A survey of optimization techniques for thermal-aware {3D} processors},
+	year = {2019},
+        month = {January},
+        volume = {97},
+        OPTnumber = {1},
+        pages = {397--415},
+}
+
+@inproceedings{Chang:ICCAD'16,
+	title={{Cascade2D}: A Design-Aware Partitioning Approach to Monolithic {3D IC} with {2D} Commercial Tools},
+	author={Kyungwook Chang and Saurabh Sinha and Brian Cline and Raney Southerland and Michael Doherty and Greg Yeric and Sung Kyu Lim},
+	booktitle=iccad,
+	year={2016},
+	month={November},
+	location = {Austin, TX},
+}
