--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4137,3 +4137,25 @@ location = {Austin, TX, USA},
 	month={November},
 	location = {Austin, TX},
 }
+
+@article{Alfano:DE'17,
+  title={Unleashing Fury: A New Paradigm for {3-D} Design and Test},
+  author={Michael Alfano and Bryan Black and Jeff Rearick and Joseph Siegel and Michael Su and Julius Din},
+  journal={IEEE Design \& Test},
+  volume={34},
+  number={1},
+  pages={8--15},
+  month={January/February},
+  year={2017},
+}
+
+@article{Ku:TCAD'20,
+	title={{Compact-2D}: A Physical Design Methodology to Build Two-Tier Gate-level {3D ICs}},
+	author={Bon Woong Ku and Kyungwook Chang and Sung Kyu Lim},
+	journal=tcad,
+	OPTvolume={25},
+	OPTnumber={12},
+	OPTpages={2882--2893},
+	year={2020},
+	OPTmonth={December},
+}
