--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4159,3 +4159,13 @@ location = {Austin, TX, USA},
 	year={2020},
 	OPTmonth={December},
 }
+
+@ARTICLE{Wang:INTEGRATION'19,
+	author = {Lihuan Wang and Shuyan Jiang and Shuyu Chen and Junshi Wang and Letian Huang},
+	journal = integration,
+	title = {Optimized mapping algorithm to extend lifetime of both {NoC} and cores in many-core system},
+	year = {2019},
+        month = {July},
+        volume = {67},
+        pages = {82--94},
+}
