--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4169,3 +4169,14 @@ location = {Austin, TX, USA},
         volume = {67},
         pages = {82--94},
 }
+
+@article{Wang:TOC'12,
+  author={Xiaorui Wang and Kai Ma and Yefu Wang},
+  title={Cache Latency Control for Application Fairness or Differentiation in Power-Constrained Chip Multiprocessors},
+  journal = toc,
+  year={2012},
+  volume = {61},
+  number = {10},
+  pages = {1371--1385},
+  month =  {October}
+}
