--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4180,3 +4180,15 @@ location = {Austin, TX, USA},
   pages = {1371--1385},
   month =  {October}
 }
+
+@article{Zhong:TOC'07,
+  author={Yutao Zhong and Steven G. Dropsho and Xipeng Shen and Ahren Studer and Chen Ding},
+  title={Miss Rate Prediction Across Program Inputs and Cache Configurations},
+  journal = toc,
+  year={2007},
+  volume = {56},
+  number = {3},
+  pages = {328--343},
+  month =  {March}
+}
+
