--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1,4 +1,4 @@
-﻿@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
+@string{iccad = "Proc. Int. Conf. on Computer Aided Design (ICCAD)"}
 @string{dac = "Proc. Design Automation Conf. (DAC)"}
 @string{eurodac = "Proc. European Design Automation Conf."}
 @string{date = "Proc. Design, Automation and Test in Europe Conf. (DATE)"}
@@ -4191,4 +4191,36 @@ location = {Austin, TX, USA},
   pages = {328--343},
   month =  {March}
 }
+
+@article{Wold:CILS'87,
+	author={Svante Wold  and Kim Esbensen  and  Paul Geladi},
+	title={Principal component analysis},
+	journal={Chemometrics and Intelligent Laboratory Systems},
+	year = {1987},
+	pages = {37--52}
+}
+
+
+
+@inproceedings{Cochran:DAC'10,
+	author = {Ryan Cochran and Sherief Reda},
+	title = {Consistent runtime thermal prediction and control through workload phase detection},
+	booktitle = dac,
+	year = {2010},
+	month = {June},	
+	location = { Anaheim, California, USA},
+	pages = {62--67}
+}
+
+@ARTICLE{Coskun:TCAD'09,
+	title = {Utilizing Predictors for Efficient Thermal Management in Multiprocessor {SoCs}},
+	author = {Ayse Kivilcim Coskun and Tajana Simunic Rosing and Kenny C. Gross},
+	journal = tcad,
+	volume = {28},
+	number = {10},	
+	pages = {1503--1516},
+	year = {2009},
+	month = {OCTOBER},
+}
+
 
