--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3003,6 +3003,7 @@ year={2014}
   OPTnumber={},
   pages={67--78},
   year={2016},
+  month={August},
 }
 
 @article{Bengio:TNN'94,
@@ -3013,6 +3014,7 @@ year={2014}
   number={2},
   pages={157--166},
   year={1994},
+  month={March},
 }
 
 @article{Hochreiter:NC'97,
@@ -3023,6 +3025,7 @@ year={2014}
   number={8},
   pages={1735--1780},
   year={1997},
+  month={November},
 }
 
 @article{Gers:NC'00,
@@ -3033,6 +3036,7 @@ year={2014}
   number={10},
   pages={2451--2471},
   year={2000},
+  month={October},
 }
 
 @article{Zhou:TVLSI'18,
@@ -4197,7 +4201,10 @@ location = {Austin, TX, USA},
 	title={Principal component analysis},
 	journal={Chemometrics and Intelligent Laboratory Systems},
 	year = {1987},
-	pages = {37--52}
+	month = {August},
+	volume = {2},
+        number = {1--3},
+	pages = {37--52},
 }
 
 
@@ -4208,7 +4215,7 @@ location = {Austin, TX, USA},
 	booktitle = dac,
 	year = {2010},
 	month = {June},	
-	location = { Anaheim, California, USA},
+	location = {Anaheim, CA},
 	pages = {62--67}
 }
 
@@ -4220,7 +4227,7 @@ location = {Austin, TX, USA},
 	number = {10},	
 	pages = {1503--1516},
 	year = {2009},
-	month = {OCTOBER},
+	month = {October},
 }
 
 
