--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4230,4 +4230,13 @@ location = {Austin, TX, USA},
 	month = {October},
 }
 
-
+@article{Zang:CSUR'13,
+  author={Wei Zang and Ann Gordon-Ross},
+  title={A Survey on Cache Tuning from a Power/Energy Perspective},
+  journal = {ACM Computing Surveys},
+  year={2013},
+  volume = {45},
+  number = {3},
+  pages = {32:1--32:49},
+  month =  {June}
+}
