--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -73,15 +73,15 @@
 }
 
 
-@ARTICLE{WangGuo:TCAD'19,
+@ARTICLE{WangGuo:TCAD'20,
 	author = {Hai Wang and Xingxing Guo and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
 	journal = tcad,
 	title = {Leakage-Aware Predictive Thermal Management for Multi-Core Systems Using Echo State Network},
-	year = {2019},
-        OPTmonth = {May},
-        OPTvolume = {67},
-        OPTnumber = {5},
-        OPTpages = {617--630},
+	year = {2020},
+        month = {July},
+        volume = {39},
+        number = {7},
+        pages = {1400--1413},
 }
 
 
@@ -107,7 +107,7 @@
         pages = {526--541},
 }
 
-@ARTICLE{WangHuang:TCAD'18,
+@ARTICLE{WangHuang:TCAD'19,
 	author = {Hai Wang and Darong Huang and Rui Liu and Chi Zhang and He Tang and Yuan Yuan},
 	journal = tcad,
 	title = {{STREAM}: Stress and Thermal Aware Reliability Management for {3-D ICs}},
@@ -4157,11 +4157,11 @@ location = {Austin, TX, USA},
 	title={{Compact-2D}: A Physical Design Methodology to Build Two-Tier Gate-level {3D ICs}},
 	author={Bon Woong Ku and Kyungwook Chang and Sung Kyu Lim},
 	journal=tcad,
-	OPTvolume={25},
-	OPTnumber={12},
-	OPTpages={2882--2893},
+	volume={39},
+	number={6},
+	pages={1151--1164},
 	year={2020},
-	OPTmonth={December},
+	month={June},
 }
 
 @ARTICLE{Wang:INTEGRATION'19,
