--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -50,6 +50,17 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangLi:TOC'21,
+	author = {Hai Wang and Wei Li and Wenjie Qi and Diya Tang and Letian Huang and He Tang},
+	journal = toc,
+	title = {Runtime Performance Optimization of {3-D} Microprocessors in Dark Silicon},
+	year = {2020},
+        OPTmonth = {April},
+        OPTvolume = {68},
+        OPTnumber = {4},
+        OPTpages = {526--541},
+}
+
 @ARTICLE{WangHu:TII'20,
 	author = {Hai Wang and Liwen Hu and Xingxing Guo and Yang Nie and He Tang},
 	journal = tii,
