--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -45,6 +45,7 @@
 @string{cvpr="Proc. IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)"}
 @string{tpds="IEEE Trans. on Parallel and Distributed Systems"}
 @string{tii="IEEE Trans. on Industrial Informatics"}
+@string{nips="Proc. Conf. on Neural Information Processing Systems (NeurIPS)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -4250,4 +4251,33 @@ location = {Austin, TX, USA},
   number = {3},
   pages = {32:1--32:49},
   month =  {June}
+}
+
+@inproceedings{Jaeger:NIPS'02,
+  title={Adaptive nonlinear system identification with echo state networks},
+  author={Herbert Jaeger},
+  booktitle=nips,
+  pages={609--616},
+  year={2002},
+  month = {January},
+  location = {Vancouver, Canada},
+}
+
+@techreport{Jaeger:Report'01,
+  title={The "echo state" approach to analysing and training recurrent neural networks},
+  author={Herbert Jaeger},
+  year={2001},
+  institution={GMD - German National Research Institute for Computer Science}
+}
+
+@incollection{Lukosevicius:Chapter'12,
+  author      = "Mantas Lukoševičius",
+  title       = "A Practical Guide to Applying Echo State Networks",
+  editor      = "Grégoire Montavon and Geneviève B. Orr and Klaus-Robert Müller",
+  booktitle   = "Neural Networks: Tricks of the Trade",
+  publisher   = "Springer, Berlin, Heidelberg",
+  OPTaddress     = "Oxford",
+  year        = 2012,
+  pages       = "659-686",
+  chapter     = 27,
 }
