--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4281,3 +4281,25 @@ location = {Austin, TX, USA},
   pages       = "659-686",
   chapter     = 27,
 }
+
+@article{Berkooz:ARFM'93,
+  author={Gal Berkooz and Philip Holmes and John L. Lumley},
+  title={The Proper Orthogonal Decomposition in the Analysis of Turbulent Flows},
+  journal = {Annual Review of Fluid Mechanics},
+  year={1993},
+  volume = {25},
+  OPTnumber = {3},
+  pages = {539--575},
+  OPTmonth =  {June}
+}
+
+@article{Benner:SR'15,
+  author={Peter Benner and Serkan Gugercin and Karen Willcox},
+  title={A Survey of Projection-Based Model Reduction Methods for Parametric Dynamical Systems},
+  journal = {SIAM Review},
+  year={2015},
+  volume = {57},
+  number = {4},
+  pages = {483--531},
+  OPTmonth =  {June}
+}
