--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4303,3 +4303,14 @@ location = {Austin, TX, USA},
   pages = {483--531},
   OPTmonth =  {June}
 }
+
+@article{Chaturantabut:SJSC'10,
+  author = {Saifon Chaturantabut and Danny C. Sorensen},
+  title = {Nonlinear Model Reduction via Discrete Empirical Interpolation},
+  journal = {SIAM Journal on Scientific Computing},
+  year={2010},
+  volume = {32},
+  number = {5},
+  pages = {2737--2764},
+  OPTmonth =  {June}
+}
