--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4314,3 +4314,14 @@ location = {Austin, TX, USA},
   pages = {2737--2764},
   OPTmonth =  {June}
 }
+
+@ARTICLE{Barrault:CRM'04,
+	author = {Maxime Barrault and Yvon Maday and Ngoc Cuong Nguyen and Anthony T. Patera},
+	journal = {Comptes Rendus Mathematique},
+	title = {An ‘empirical interpolation’ method: application to efficient reduced-basis discretization of partial differential equations},
+	year = {2004},
+        month = {November},
+        volume = {339},
+        number = {9},
+        pages = {667--672},
+}
