--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -398,7 +398,7 @@ pages = {187--192}
 }
 
 @inproceedings{Ayoub:ISLPED'09,
- author = {Raid Ayoub and Tajana \v{S}imuni\'{c} Rosing},
+ author = {Raid Ayoub and Tajana Simunic Rosing},
  title = {Predict and Act: Dynamic Thermal Management for Multi-Core Processor},
  booktitle = islped,
  year = {2009},
@@ -1695,7 +1695,7 @@ year={2008},
 }
 
 @article{Sharifi:TCAD'10,
- author = {Shervin Sharifi and Tajana \v{S}imuni\'{c} Rosing},
+ author = {Shervin Sharifi and Tajana Simunic Rosing},
  title = {Accurate Direct and Indirect On-Chip Temperature Sensing for Efficient Dynamic Thermal Management},
  journal = tcad,
  volume = {29},
@@ -3493,7 +3493,7 @@ url = {http://minds.jacobs-university.de/research/esnresearch/}
 }
 
 @conference{Kim:ICCAD'15,
-author={Yeseong Kim and Francesco Parterna and Sameer Tilak and Tajana S. Rosing},
+author={Yeseong Kim and Francesco Parterna and Sameer Tilak and Tajana Simunic Rosing},
 title={Smartphone Analysis and Optimization based on User Activity Recognition},
 booktitle= iccad,
 year={2015},
@@ -4324,4 +4324,23 @@ location = {Austin, TX, USA},
         volume = {339},
         number = {9},
         pages = {667--672},
+}
+
+@inproceedings{Liao:DATE'15,
+  title={An Online Thermal-Constrained Task Scheduler for {3D} Multi-Core Processors},
+  author={Chien-Hui Liao and Charles H.-P. Wen and Krishnendu Chakrabarty},
+  booktitle=date,
+  month = {March},
+  year={2015},
+  location = {Grenoble, France},
+}
+
+@article{Zhou:TPDS'10,
+  title={Thermal-Aware Task Scheduling for {3D} Multicore Processors},
+  author={Xiuyi Zhou and Jun Yang and Yi Xu and Youtao Zhang and Jianhua Zhao},
+  journal=tpds,
+  volume={21},
+  number={1},
+  pages={60--71},
+  year={2010}
 }
