--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -22,7 +22,7 @@
 @string{tmit = "IEEE Trans. on Microwave Theory and Techniques"}
 @string{toc = "IEEE Trans. on Computers"}
 @string{integration = "Integration, the VLSI Journal"}
-@string{tcasII = "IEEE Trans. on Circuits and Systems II: Analog and Digital Signal Processing"}
+@string{tcasII = "IEEE Trans. on Circuits and Systems II: Express Briefs"}
 @string{bmas = "Proc. IEEE International Workshop on Behavioral Modeling and Simulation (BMAS)"}
 @string{aicsp = "Kluwer International Journal on Analog Integrated Circuits and Signal Processing"}
 @string{ieice="IEICE Trans. Fundamentals of Electronics, Communications and Computer Sciences"}
@@ -2691,7 +2691,7 @@ Year={1987}
 	pages={87--94},
 	year={2008},
 	month={December},
-	location={Taipei, Taiwan},
+	location={Taipei, Taiwan, China},
 }
 
 @inproceedings{Wang:ISQED'10,
@@ -3421,7 +3421,7 @@ Publisher={Wiley},
 @article{Xie:TCASII'15,
   title={Performance comparisons between 7-nm {FinFET} and conventional bulk {CMOS} standard cell libraries},
   author={Qing Xie and Xue Lin and Yanzhi Wang and Shuang Chen and Mohammad Javad Dousti and Massoud Pedram},
-  journal={IEEE Transactions on Circuits and Systems II: Express Briefs},
+  journal=tcasII,
   volume={62},
   number={8},
   pages={761--765},
@@ -3529,7 +3529,7 @@ month ={November},
  booktitle = aspdac,
  year = {2010},
  month = {January},
- location = {Taipei, China},
+ location = {Taipei, Taiwan, China},
  pages = {873--878}
 }
 
@@ -3629,7 +3629,7 @@ month ={November},
 @article{Lee:TVLSI'15,
   	title={Runtime thermal management for {3-D} chip-multiprocessors with hybrid {SRAM/MRAM L2} cache},
   	author={Lee, Seunghan and Kang, Kyungsu and Kyung, Chong-Min},
-  	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  	journal=tvlsi,
   	volume={23},
   	number={3},
   	pages={520--533},
@@ -3641,7 +3641,7 @@ month ={November},
 @article{Lee:TVLSI'16,
   	title={Hybrid {L2 NUCA} Design and Management Considering Data Access Latency, Energy Efficiency, and Storage Lifetime},
   	author={Lee, Seunghan and Kang, Kyungsu and Jung, Jongpil and Kyung, Chong-Min},
-  	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
+  	journal=tvlsi,
   	volume={24},
   	number={10},
   	pages={3118--3131},
@@ -4343,4 +4343,34 @@ location = {Austin, TX, USA},
   number={1},
   pages={60--71},
   year={2010}
+}
+
+@article{Motoyoshi:IEEEPROC'09,
+  title={Through-Silicon Via ({TSV})},
+  author={Makoto Motoyoshi},
+  journal= ieeeproc,
+  volume={97},
+  number={1},
+  pages={43--48},
+  year={2009},
+  publisher={IEEE}
+}
+
+@article{Lai:ME'11,
+  title={Wafer-level three-dimensional integrated circuits ({3D IC}): Schemes and key technologies},
+  author={Ming-Fang Lai and Shih-Wei Li and Jian-Yu Shih and Kuan-Neng Chen},
+  journal={Microelectronic Engineering},
+  volume={88},
+  pages={3282--3286},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{Wong:VLSI-TSA'07,
+  title={Monolithic {3D} Integrated Circuits},
+  author={Simon Wong and Abbas El-Gamal and Peter Griffin and Yoshio Nishi and Fabian Pease and James Plummer},
+  booktitle={Proc. Int. Symp. on VLSI Technology, Systems and Applications (VLSI-TSA)},
+  month = {April},
+  year={2007},
+  location = {Hsinchu, Taiwan, China},
 }
