--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -67,10 +67,10 @@
 	journal = tii,
 	title = {Compact Piecewise Linear Model Based Temperature Control of Multi-Core Systems Considering Leakage Power},
 	year = {2020},
-        OPTmonth = {May},
-        OPTvolume = {67},
-        OPTnumber = {5},
-        OPTpages = {617--630},
+        month = {December},
+        volume = {16},
+        number = {12},
+        pages = {7556--7565},
 }
 
 @ARTICLE{WangXiao:TODAES'19,
