--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4374,3 +4374,11 @@ location = {Austin, TX, USA},
   year={2007},
   location = {Hsinchu, Taiwan, China},
 }
+
+@phdthesis{Chaturantabut:THESIS'11,
+  author = {Saifon Chaturantabut},
+  title = {Nonlinear Model Reduction via Discrete Empirical Interpolation},
+  school = {Rice University},
+  year   = {2011},
+  month  = {May}
+}
