--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4382,3 +4382,12 @@ location = {Austin, TX, USA},
   year   = {2011},
   month  = {May}
 }
+
+@inproceedings{Hochman:DAC'11,
+  title={A Stabilized Discrete Empirical Interpolation Method for Model Reduction of Electrical, Thermal, and Microelectromechanical Systems},
+  author={Amit Hochman and Bradley N. Bond and Jacob K. White},
+  booktitle=dac,
+  month = {June},
+  year={2011},
+  location = {San Diego, CA},
+}
