--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4391,3 +4391,12 @@ location = {Austin, TX, USA},
   year={2011},
   location = {San Diego, CA},
 }
+
+@inproceedings{Jaderberg:BMVC'14,
+  title={Speeding up Convolutional Neural Networks with Low Rank Expansions},
+  author={Max Jaderberg and Andrea Vedaldi and Andrew Zisserman},
+  booktitle={Proc. British Machine Vision Conf. (BMVC)},
+  month = {September},
+  year={2014},
+  location = {Nottingham, UK},
+}
