--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -46,6 +46,7 @@
 @string{tpds="IEEE Trans. on Parallel and Distributed Systems"}
 @string{tii="IEEE Trans. on Industrial Informatics"}
 @string{nips="Proc. Conf. on Neural Information Processing Systems (NeurIPS)"}
+@string{tpami="IEEE Trans. on Pattern Analysis and Machine Intelligence"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -4399,4 +4400,15 @@ location = {Austin, TX, USA},
   month = {September},
   year={2014},
   location = {Nottingham, UK},
+}
+
+@ARTICLE{Zhang:TPAMI'16,
+	author = {Xiangyu Zhang and Jianhua Zou and Kaiming He and Jian Sun},
+	journal = tpami,
+	title = {Accelerating Very Deep Convolutional Networks for Classification and Detection},
+	year = {2016},
+        month = {October},
+        volume = {38},
+        number = {10},
+        pages = {1943--1955},
 }
