--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4412,3 +4412,14 @@ location = {Austin, TX, USA},
         number = {10},
         pages = {1943--1955},
 }
+
+@ARTICLE{Rodan:TNN'11,
+	author = {Ali Rodan and Peter Ti\v{n}o},
+	journal = {IEEE Trans. on Neural Networks},
+	title = {Minimum Complexity Echo State Network},
+	year = {2011},
+        month = {January},
+        volume = {22},
+        number = {1},
+        pages = {131--144},
+}
