--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4423,3 +4423,14 @@ location = {Austin, TX, USA},
         number = {1},
         pages = {131--144},
 }
+
+@ARTICLE{Marchetti:TPAMI'20,
+	author = {Francesco Marchetti and Federico Becattini and Lorenzo Seidenari and Alberto Del Bimbo},
+	journal = tpami,
+	title = {Multiple Trajectory Prediction of Moving Agents with Memory Augmented Networks},
+	year = {2020},
+        OPTmonth = {October},
+        OPTvolume = {38},
+        OPTnumber = {10},
+        OPTpages = {1943--1955},
+}
