--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4434,3 +4434,35 @@ location = {Austin, TX, USA},
         OPTnumber = {10},
         OPTpages = {1943--1955},
 }
+
+@ARTICLE{Chen:TPAMI'19,
+	author = {Shi Chen and Qi Zhao},
+	journal = tpami,
+	title = {Shallowing Deep Networks: Layer-Wise Pruning Based on Feature Representations},
+	year = {2019},
+        month = {December},
+        volume = {41},
+        number = {12},
+        pages = {3048--3056},
+}
+
+@ARTICLE{Lou:TPAMI'19,
+	author = {Jian-Hao Luo and Hao Zhang and Hong-Yu Zhou and Chen-Wei Xie and Jianxin Wu and Weiyao Lin},
+	journal = tpami,
+	title = {{ThiNet}: Pruning {CNN} Filters for a Thinner Net},
+	year = {2019},
+        month = {October},
+        volume = {41},
+        number = {10},
+        pages = {2525--2538},
+}
+
+@inproceedings{Han:NIPS'15,
+  title={Learning both Weights and Connections for Efficient Neural Network},
+  author={Song Han and Jeff Pool and John Tran and William Dally},
+  booktitle=nips,
+  pages={1135--1143},
+  year={2015},
+  month = {December},
+  location = {Montreal, Canada},
+}
