--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -47,6 +47,7 @@
 @string{tii="IEEE Trans. on Industrial Informatics"}
 @string{nips="Proc. Conf. on Neural Information Processing Systems (NeurIPS)"}
 @string{tpami="IEEE Trans. on Pattern Analysis and Machine Intelligence"}
+@string{tnn="IEEE Trans. on Neural Networks"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -3022,7 +3023,7 @@ year={2014}
 @article{Bengio:TNN'94,
   title={Learning Long-Term Dependencies with Gradient Descent is Difficult},
   author={Yoshua Bengio and Patrice Simard and Paolo Frasconi},
-  journal={IEEE Transactions on Neural Networks},
+  journal=tnn,
   volume={5},
   number={2},
   pages={157--166},
@@ -4415,8 +4416,8 @@ location = {Austin, TX, USA},
 
 @ARTICLE{Rodan:TNN'11,
 	author = {Ali Rodan and Peter Ti\v{n}o},
-	journal = {IEEE Trans. on Neural Networks},
 	title = {Minimum Complexity Echo State Network},
+	journal = tnn,
 	year = {2011},
         month = {January},
         volume = {22},
@@ -4465,4 +4466,15 @@ location = {Austin, TX, USA},
   year={2015},
   month = {December},
   location = {Montreal, Canada},
+}
+
+@ARTICLE{Atiya:TNN'00,
+	author = {Amir F. Atiya and Alexander G. Parlos},
+	title = {New Results on Recurrent Network Training: Unifying the Algorithms and Accelerating Convergence},
+	journal = tnn,
+	year = {2000},
+        month = {May},
+        volume = {11},
+        number = {3},
+        pages = {697--709},
 }
