--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4478,3 +4478,13 @@ location = {Austin, TX, USA},
         number = {3},
         pages = {697--709},
 }
+
+@article{Schrauwen:NEUROCOMP'08,
+  title={Improving reservoirs using intrinsic plasticity},
+  author={Benjamin Schrauwen and Marion Wardermann and David Verstraeten and Jochen J. Steil and Dirk Stroobandt},
+  journal={Neurocomputing},
+  volume={71},
+  number={7--9},
+  pages={1159--1171},
+  year={2008}
+}
